# bevy_navigator

./: Cargo.toml  LICENSE  README.md
benches/: bench_path.rs
examples/: traveling.rs
src/: lib.rs  navigation.rs  traveler.rs
